# vibe-cast

./: .dockerignore  .env.example  .env.local.example  .gitignore  .gitignore-tutorial  .gitleaks.toml  .gitleaksignore  .gitmodules  .pre-commit-config.yaml  24-May-26-Status.md  AGENTS.md  AI_Summit_Flyer.docx.md  API.md  ARCHITECTURE.md  AZURE-SETUP.md  Agentic-AI-Practitioner-Course-Syllabus.md  Antigravity-CLI.md  BROWSER_CONSOLE_EXTRACTION.md  BROWSER_CONSOLE_SIMPLE.md  BROWSER_CONSOLE_VISUAL.md  CLAUDE.md  CLOUD_RUN_DEPLOY.md  COLAB_PRO_RVC_GUIDE.md  COMPLETION_SUMMARY.txt  CONTRIBUTING.md  Cargo.toml  Cloud-training-README.md  DAO-DAG-README.MD  DEMO-GUIDE.md  DEMO-WALKTHROUGH.md  DEMO_APPS.md  DEPLOYMENT-CHECKLIST.md  DEPLOYMENT-SUMMARY.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DEVELOPMENT.md  Dockerfile  EXPLORATION_LOG.md  FIAT500_CASE_STUDY.md  GEMINI-QUICK-START.md  (+161 more)
.agentic-qe/: config.yaml  memory.db
.antigravitycli/: 136f469b-ff62-416f-83e0-79775e00706a.json
.claude/: CLAUDE.md  README.md  mcp.json  settings.json
.claude-flow/: CAPABILITIES.md  config.yaml
.swarm/: memory.db  schema.sql
ADR/: ADR-001-mdx-format.md  ADR-002-netlify-hosting.md  ADR-003-modular-lessons.md  ADR-004-tdd-assessments.md
Agentic-AI-News/: README.md  handlers.py  newsletter_digest.json  run_news_digest.py  schema.sql  workflow.yaml
DDD/: domain-model.md  ubiquitous-language.md
NLP-and-video-rendering/: .env.example  .gitignore  PRODUCTION-DEPLOYMENT.md  Patient_Safety_Technology_Presentation.pptx  QUICK-DEPLOY.md  README.md  TROUBLESHOOTING.md  WEB-UI-README.md  netlify.toml  package-lock.json  package.json  tsconfig.json
Python_Notebook_Implementation/: competitor_analysis_tutorial.ipynb  generate_notebook.py
genomic_one/: CLAUDE.md  Cargo.toml  PROGRESS.md  README.md
genomic_one/.github/workflows/: deploy.yml
genomic_one/docs/: genomic_one_spec.md  genomic_one_ui_addendum.md  genomic_one_ui_patch.md
genomic_one/docs/speckit-specs/: constitution.md
genomic_one/docs/speckit-specs/features/: feature-001-five-layer-architecture.md  feature-002-brain-sidebar.md  feature-003-brain-memories.md  feature-004-brain-learning.md  feature-005-neural-layer-fann.md
genomic_one/frontend/: README.md  next.config.mjs  package-lock.json  package.json
genomic_one/frontend/public/: explainer-v1.html  explainer-v2.html  test.txt
genomic_one/frontend/src/app/: app-shell.tsx  globals.css  layout.tsx  page.tsx  providers.tsx
genomic_one/frontend/src/app/auth/login/: page.tsx
genomic_one/frontend/src/app/auth/register/: page.tsx
genomic_one/frontend/src/app/brain/: layout.tsx
genomic_one/frontend/src/app/brain/advisory/: page.tsx
genomic_one/frontend/src/app/brain/architecture/: page.tsx
genomic_one/frontend/src/app/brain/federation/: page.tsx
genomic_one/frontend/src/app/brain/intelligence/: page.tsx
genomic_one/frontend/src/app/brain/learning/: page.tsx
genomic_one/frontend/src/app/brain/memories/: page.tsx
genomic_one/frontend/src/app/brain/pathways/: page.tsx
genomic_one/frontend/src/app/brain/simulate/: page.tsx
genomic_one/frontend/src/app/brain/simulate/new/: page.tsx
genomic_one/frontend/src/app/upload/: page.tsx
genomic_one/frontend/src/components/: BrainGraph3D.tsx  BrainSidebar.tsx  ConceptExplainers.tsx  DiseaseTrajectory.tsx  DnaLogo.tsx  EpigeneticClock.tsx  EvidenceBase.tsx  GenePanel.tsx  InviteModal.tsx  KmerHeatmap.tsx  MoleculeCard.tsx  PharmaDashboard.tsx  PipelineSummary.tsx  ProteinViewer.tsx  StreamingProgress.tsx  VariantBrowser.tsx
genomic_one/frontend/src/lib/: api.ts  auth-context.tsx  static-data.ts
genomic_one/samples/: README.md  brca1-fragment.fasta  cyp2d6-fragment.fasta  hbb-reference.fasta  hbb-sickle.fasta  invalid-input.fasta  multi-record.fasta
genomic_one/src/: analyze.rs  api.rs  core.rs  lib.rs  main.rs
js/: main.js  (+2 more)
rust-learning/: .gitignore  Cargo.toml  PROGRESS.md  README.md
rust-learning/chapters/ch01_getting_started/: README.md
rust-learning/chapters/ch01_getting_started/hello_cargo/: Cargo.toml
rust-learning/chapters/ch01_getting_started/hello_cargo/src/: main.rs
rust-learning/chapters/ch01_getting_started/hello_world/: main.rs
rust-learning/chapters/ch02_guessing_game/: Cargo.toml
rust-learning/chapters/ch02_guessing_game/src/: main.rs
rust-learning/chapters/ch03_common_concepts/: Cargo.toml
rust-learning/chapters/ch03_common_concepts/src/: main.rs
rust-learning/chapters/ch04_ownership/: Cargo.toml
rust-learning/chapters/ch04_ownership/src/: main.rs
rust-learning/chapters/ch05_structs/: Cargo.toml
rust-learning/chapters/ch05_structs/src/: main.rs
rust-learning/chapters/ch06_enums/: Cargo.toml
rust-learning/chapters/ch06_enums/src/: main.rs
rust-learning/chapters/ch12_minigrep/: Cargo.toml
rust-learning/chapters/ch12_minigrep/src/: lib.rs  main.rs
rust-learning/projects/: .gitkeep
(+2096 files in other folders)
