[package]
name = "aave-mcp"
version = "0.1.0"
edition = "2021"
description = "Aave Protocol MCP server — native stdio binary + WASM module"
license = "MIT"
repository = "https://github.com/YOUR_USER/vibe-cast"

# ─── Library target ───────────────────────────────────────────────────────────
# cdylib → WASM (.wasm artefact via wasm-pack)
# rlib   → native linkage for the server binary
[lib]
name = "aave_mcp"
crate-type = ["cdylib", "rlib"]

# ─── Native binary (MCP stdio server) ─────────────────────────────────────────
[[bin]]
name = "server"
path = "src/bin/server.rs"

# ─── Shared dependencies (both targets) ───────────────────────────────────────
[dependencies]
serde       = { version = "1",    features = ["derive"] }
serde_json  = "1"
thiserror   = "1"
anyhow      = "1"
tracing     = "0.1"

# alloy: Ethereum RPC + ABI/sol! macro
# Reqwest transport works on both native and WASM (reqwest has wasm support).
# Pin to 0.9.x; bump cautiously — alloy still moves fast.
alloy = { version = "0.9", default-features = false, features = [
    "providers",        # RootProvider, ProviderBuilder
    "reqwest",          # HTTP transport (native + WASM)
    "rpc-types",        # eth_call, BlockId, etc.
    "sol-types",        # sol! macro type generation
    "contract",         # ContractInstance helpers
    "network",          # Ethereum network type
    "json-abi",         # ABI parsing
] }

# ─── Native-only dependencies ─────────────────────────────────────────────────
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# Official Rust MCP SDK (the modelcontextprotocol/rust-sdk crate)
rmcp              = { version = "0.16", features = ["server", "transport-io"] }
tokio             = { version = "1",    features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# ─── WASM-only dependencies ───────────────────────────────────────────────────
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen         = "0.2"
wasm-bindgen-futures = "0.4"
js-sys               = "0.3"
console_error_panic_hook = "0.1"
# Needed so alloy/ring can do randomness in WASM
getrandom = { version = "0.2", features = ["js"] }
web-sys = { version = "0.3", features = [
    "console",
    "Window",
    "Headers",
    "Request",
    "RequestInit",
    "Response",
] }

# ─── Build profiles ───────────────────────────────────────────────────────────
[profile.release]
opt-level     = "z"   # Size-optimise — critical for WASM
lto           = true
codegen-units = 1
strip         = true

[profile.dev]
opt-level = 0
debug     = true
